--- a/app/blog/posts/hello-world.mdx
+++ b/app/blog/posts/hello-world.mdx
@@ -3,8 +3,7 @@ title: "Making My First Dollar On The Internet"
 excerpt: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Praesent elementum facilisis leo vel fringilla est ullamcorper eget. At imperdiet dui accumsan sit amet nulla facilities morbi tempus."
 coverImage: "/images/blog/covers/cover.jpg"
 date: "2024-05-22"
-ogImage:
-  url: "/images/blog/covers/cover.jpg"
+ogImage: "/images/blog/covers/cover.jpg"
 ---
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Praesent elementum facilisis leo vel fringilla est ullamcorper eget. At imperdiet dui accumsan sit amet nulla facilities morbi tempus. Praesent elementum facilisis leo vel fringilla. Congue mauris rhoncus aenean vel. Egestas sed tempus urna et pharetra pharetra massa massa ultricies.
